# time-tracking-app

./: .env.example  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  Dockerfile.testing  README.md  docker-compose.override.yml  docker-compose.testing.yml  prestart.sh  pyproject.toml  start-dev.sh  start-test.sh
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: tasks.py
backend/app/core/: config.py
backend/app/crud/: crud_task.py
backend/app/db/: base.py  init_db.py
backend/app/models/: task.py
backend/app/schemas/: __init__.py  task.py
backend/tests/api/api_v1/: test_tasks.py
backend/tests/crud/: test_task.py
backend/tests/utils/: task.py
frontend/: .dockerignore  .env.example  .eslintrc.js  Dockerfile  README.md  docker-compose.yml  jest.config.js  nuxt.config.js  package-lock.json  package.json  tsconfig.json
frontend/layouts/: default.vue  error.vue
frontend/pages/: index.vue
frontend/test/: setup.ts
frontend/test/unit/: main.spec.ts
