[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["wbwb33 <wibi.s.wi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.68.1"
SQLAlchemy = "^1.4.25"
psycopg2-binary = "^2.9.1"
uvicorn = "^0.15.0"
python-dotenv = "^0.19.0"
tenacity = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
sqlalchemy-stubs = "^0.4"
flake8 = "^3.9.2"
autoflake = "^1.4"
isort = "^5.9.3"
black = "^21.9b0"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
